welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:57: error: value tp is not a member of Int
     for (x <- 1 tp 5) {
                 ^